tests/ui/traits/next-solver/diagnostics/alias_relate_error_uses_structurally_normalize.stderr
error[E0271]: type mismatch resolving `<Foo<_> as Trait>::Assoc == u32`
  --> $DIR/alias_relate_error_uses_structurally_normalize.rs:24:9
   |
LL |     bar(foo);
   |     --- ^^^ expected `u32`, found `u64`
   |     |
   |     required by a bound introduced by this call
   |
note: required by a bound in `bar`
  --> $DIR/alias_relate_error_uses_structurally_normalize.rs:20:17
   |
LL | fn bar<T: Trait<Assoc = u32>>(_: T) {}
   |                 ^^^^^^^^^^^ required by this bound in `bar`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0271`.
